--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.1.7",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
