--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.12",
     "sheetjs-style": "^0.15.8",
     "web-vitals": "^2.1.4"
   },
